--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -14,26 +14,14 @@ main {
 
 .container {
     display: flex;
+    flex-direction: row;
     width: 1000px;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
-    flex-wrap: wrap;
-    justify-self: center;
-    
 }
 
-button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    margin-right: 30px;
-}
 button:hover {
     opacity: 0.9;
 }
