--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -8,3 +8,14 @@
     align-items: center;
     justify-content: right;
 }
+
+button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    margin-right: 30px;
+}
