--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -9,23 +9,39 @@
     justify-content: right;
 }
 
-.amenities {
-    height: 100%;
-    width: 25%;
-    margin: 0;
-}
-
 .locations {
     border-right: #DDDDDD 1px;
     height: 100%;
     width: 25%;
     margin: 0;
+    padding-left: 30px;
+    flex: 2;
+}
+
+.amenities {
+    height: 100%;
+    width: 25%;
+    margin: 0;
+    flex: 5;
 }
 
 h3 {
     font-weight: 600;
+    margin-bottom: 0;
 }
 
 h4 {
     font-weight: 400;
+    margin: 0;
+}
+
+button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    margin-right: 30px;
 }
