--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -14,12 +14,14 @@ main {
 
 .container {
     display: flex;
-    flex-direction: row;
-    width: 1000px;
+    flex-direction: column;
+    max-width: 1000px;
+    width: 100%;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
+    padding: 0 15px;
 }
 
 button:hover {
