--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,7 +1,7 @@
 .filters {
     display: flex;
     background-color: white;
-    height: 70px;
+    min-height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
